[package]
name = "zulip-messages-rs"
version = "0.1.0"
authors = ["bjorn3 <bjorn3@users.noreply.github.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
futures = "0.3.6"
chrono = { version = "0.4.19", features = ["serde"] }
notify-rust = "4.0.0"
